work on tutorial mode

--- a/demo.html
+++ b/demo.html
@@ -26,6 +26,7 @@
 		
 	<!-- Marathon css libraries  -->
 	<link rel="stylesheet" href="./css/buttons.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/tutorial.css" rel="stylesheet">
 
 	<!-- Demo css  -->
 	<link rel="stylesheet" href="./css/demo.css" rel="stylesheet">
@@ -209,7 +210,9 @@
 					html.h1("Example title").asJQuery().appendTo(div);
 					html.span("This is a first comment on this element...").addClass("mr-comment").asJQuery().appendTo(div);
 					html.p("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.").asJQuery().appendTo(div);
-					html.span("This is a second comment on this element...").addClass("mr-comment").asJQuery().appendTo(div);
+					html.span("This is an other comment on this element...").addClass("mr-comment").asJQuery().appendTo(div);
+					html.p("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.").asJQuery().appendTo(div);
+					html.span("This is an other comment on this element...").addClass("mr-comment").asJQuery().appendTo(div);
 					html.button("Example").addClass("primary").click(function () {openTutorial()}).asJQuery().appendTo(div);
 				}
 								
