--- a/demo.html
+++ b/demo.html
@@ -210,16 +210,11 @@
 				that.renderOn = function(html) {
 					div = html.div().addClass("panel tutorial").asJQuery();
 					html.h1("Example title").asJQuery().appendTo(div);
-					comment = html.div().addClass("mr-comment").asJQuery();
-					html.span("This is a first comment on this element...").asJQuery().appendTo(comment);
-					comment.appendTo(div);
 					html.p("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.").asJQuery().appendTo(div);
-					comment = html.div().addClass("mr-comment").asJQuery();
-					html.span("This is an other comment on this element...").asJQuery().appendTo(comment);
-					comment.appendTo(div);
 					html.hr().asJQuery().appendTo(div);
 					html.p("Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.").asJQuery().appendTo(div);
 					comment = html.div().addClass("mr-comment").asJQuery();
+					html.img().setAttribute("src", "./img/logo.png").asJQuery().appendTo(comment);
 					html.span("This is the last comment of the page...").asJQuery().appendTo(comment);
 					comment.appendTo(div);
 					html.span("This is a first comment on this element...").asJQuery().appendTo(comment);
