--- a/demo.html
+++ b/demo.html
@@ -25,10 +25,12 @@
 	<!-- Marathon js libraries  -->
 	<script type='text/javascript' src='./js/layout.js'></script> 
 	<script type='text/javascript' src='./js/tutorial.js'></script>
+	<script type='text/javascript' src='./js/slider.js'></script>
 		
 	<!-- Marathon css libraries  -->
 	<link rel="stylesheet" href="./css/buttons.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/tutorial.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/slider.css" rel="stylesheet">
 
 	<!-- Demo css  -->
 	<link rel="stylesheet" href="./css/demo.css" rel="stylesheet">
