add order attribute for tutorial

--- a/demo.html
+++ b/demo.html
@@ -29,6 +29,7 @@
 		
 	<!-- Marathon css libraries  -->
 	<link rel="stylesheet" href="./css/buttons.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/select.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/tutorial.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/slider.css" rel="stylesheet">
 
